k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CI_PROJECT_NAME
  labels:
    maintainer: ${GITLAB_USER_LOGIN}
    app: $CI_PROJECT_NAME
spec:
  selector:
    matchLabels:
      app: $CI_PROJECT_NAME
  replicas: 1
  template:
    metadata:
      labels:
        maintainer: ${GITLAB_USER_LOGIN}
        app: $CI_PROJECT_NAME
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
      containers:
        - name: ${CI_PROJECT_NAME}
          image: ${CONTAINER_TAGGED_IMAGE}
          ports:
            - containerPort: ${APP_PORT}
          livenessProbe:
            httpGet:
              path: /health/
              port: ${APP_PORT}
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
      imagePullSecrets:
        - name: harbor
