k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: ${APP_PORT}
      targetPort: ${APP_PORT}
#      port: 80
#      targetPort: 80
  selector:
    app: ${CI_PROJECT_NAME}
